--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <link href="https://unpkg.com/primeicons/primeicons.css" rel="stylesheet" />
   <link href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png">
-
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
   <!-- Option 1: Include in HTML -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
